--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>  
+    <form action="" class="weatherForm">
+        <input type="text" class="cityInput" placeholder="Enter City">
+        <button type="submit">Get Weather</button>
+    </form>
 
+    <div class="card">
+        <!-- <h1 class="cityDisplay">Boston</h1>
+        <p class="tempDisplay">21°C</p>
+        <p class="humidityDisplay">75%</p>
+        <p class="descDisplay">Clear Skies</p>
+        <p class="weatherEmoji">🌞</p>
+
+        <p class="errorDisplay">Please Enter the City</p> -->
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
